# TDSE_competition_0_public

./: .gitignore  LICENSE  LightGBM_baseline.ipynb  README.md  pyproject.toml
html/: 001_EDA.html
input/EDA_functions/: data_search_functions.py  plot_functions.py
src/: EDA.ipynb  LightGBM_baseline.ipynb
